2010/09/11 - Alejandro Guerrieri <aguerrieri at kannel dot org>
  - Fixed bug: Not all sms messages were acked properly before, leaving messages in the message store.
    Thanks Rene Kluwen for this patch.

2010/06/16 - Rene Kluwen <rene.kluwen at chimit.nl>
  - Fixed bug that sqlbox didn't disconnect from bearerbox when one of the attached
  smsboxes would disconnect.

2010/08/02 - Alejandro Guerrieri <aguerrieri at kannel dot org>
  - Fixes bug that prevented single quotes to be used on message text and other fields.
    Thanks Rene Kluwen for this patch.

2009/12/28 - Alejandro Guerrieri <aguerrieri at kannel dot org>
  - Added support for meta-data on all DB engines
  - Added support for automake 1.11

2009/05/19 - Alejandro Guerrieri <aguerrieri at kannel dot org>
  - Added support for MS-SQL and Sybase
  - Added rpm target
  - Fixed tab->spaces across all code

2008/11/21 - Alejandro Guerrieri <aguerrieri at kannel dot org>
  - Completed documentation on missing DB modules.
  - Added RPM support. Now it's possible to build RPM's natively by running "make rpm" instead of "make".
    The module detects the DB engine compiled on Kannel and renames the RPM accordingly.

2008/11/18 - 0.7.1 [CVS Tag: rev-0-7-1] - Alejandro Guerrieri <aguerrieri at kannel dot org>
    - Added support for the LibSDB database abstraction library. DB support is now similar to Kannel's.
    - Extensive code reorganization to move the queries into the header files and allow reusing from the libsdb module.
    - Added examples for database connections on sample conf file.

2008/11/12 - 0.7.0 [CVS Tag: rev-0-7-0] - Alejandro Guerrieri <aguerrieri at kannel dot org>
    - Added support for Oracle, SQLite2 and SQLite 3.
    - Binary now install under sbin instead of bin, just like all the other Kannel "boxes".

2008/11/03 - 0.6.0 [CVS Tag: rev-0-6-0] - Alejandro Guerrieri <aguerrieri at kannel dot org>
    - Added documentation into the build process.