@@ -1,3 +1,6 @@
+2010-10-06  Stipe Tolj  <stolj at kannel.org>
+    * gw/sqlbox.c, gw/sqlbox_[pgsql|sqlite3].c: fixed various compiler warnings.
+
 2010/09/11 - Alejandro Guerrieri <aguerrieri at kannel dot org>
   - Fixed bug: Not all sms messages were acked properly before, leaving messages in the message store.
     Thanks Rene Kluwen for this patch.
